Changing html to njk

--- a/views/videos.njk
+++ b/views/videos.njk
@@ -1,10 +1,11 @@
-{% extends "layout.html" %}
+{% extends "layout.njk" %}
 
 {% block head %}
 <title>Videos - Davi Lobo</title>
 {% endblock %}
 
 {% block content %}
+
 <main id="main-content" class="_grid">
     <h1>Aulas</h1>
     
