Video modal created

--- a/views/videos.njk
+++ b/views/videos.njk
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>Videos - Davi Lobo</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -77,4 +78,18 @@
         </div>
     </section>
 </main>
+
+<div class="modal-overlay">
+    <div class="modal">
+        <div class="close-button">
+            <i class="material-icons button">close</i>
+        </div>
+
+        <div class="content">
+
+        </div>
+    </div>
+</div>
+
+<script src="assets/js/video-modal.js"></script>
 {% endblock %}
