--- a/views/videos.njk
+++ b/views/videos.njk
@@ -11,7 +11,7 @@
     <h1>Aulas</h1>
     
     <section class="cards-container">
-        <div class="card-item">
+        <div class="card-item" id="c7P03kkrEG8">
             <div class="wrapper">
                 <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
             </div>
@@ -22,57 +22,57 @@
             </div>
         </div>
 
-        <div class="card-item">
+        <div class="card-item" id="ICIz5dE3Xfg">
             <div class="wrapper">
-                <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
+                <img class="img" src="https://img.youtube.com/vi/ICIz5dE3Xfg/maxresdefault.jpg" alt="Video aula">
             </div>
             <div class="info">
-                <h2 class="title">Configurando VSCode</h2>
-                <p class="text">22 min</p>
+                <h2 class="title">Deploy de apps Node</h2>
+                <p class="text">114 min</p>
                 <p class="text">Free</p>
             </div>
         </div>
 
-        <div class="card-item">
+        <div class="card-item" id="X2RKRKdqqwM">
             <div class="wrapper">
-                <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
+                <img class="img" src="https://img.youtube.com/vi/X2RKRKdqqwM/maxresdefault.jpg" alt="Video aula">
             </div>
             <div class="info">
-                <h2 class="title">Configurando VSCode</h2>
-                <p class="text">22 min</p>
+                <h2 class="title">Estrutura de pastas para React</h2>
+                <p class="text">15 min</p>
                 <p class="text">Free</p>
             </div>
         </div>
 
-        <div class="card-item">
+        <div class="card-item" id="HN1UjzRSdBk">
             <div class="wrapper">
-                <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
+                <img class="img" src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg" alt="Video aula">
             </div>
             <div class="info">
-                <h2 class="title">Configurando VSCode</h2>
-                <p class="text">22 min</p>
+                <h2 class="title">Desvendando o CSS Grid</h2>
+                <p class="text">36 min</p>
                 <p class="text">Free</p>
             </div>
         </div>
 
-        <div class="card-item">
+        <div class="card-item" id="aTf8QTjw4RE">
             <div class="wrapper">
-                <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
+                <img class="img" src="https://img.youtube.com/vi/aTf8QTjw4RE/maxresdefault.jpg" alt="Video aula">
             </div>
             <div class="info">
-                <h2 class="title">Configurando VSCode</h2>
-                <p class="text">22 min</p>
+                <h2 class="title">Typescript com NodeJS</h2>
+                <p class="text">43 min</p>
                 <p class="text">Free</p>
             </div>
         </div>
 
-        <div class="card-item">
+        <div class="card-item" id="awRtgpRsdTQ">
             <div class="wrapper">
-                <img class="img" src="https://img.youtube.com/vi/c7P03kkrEG8/maxresdefault.jpg" alt="Video aula">
+                <img class="img" src="https://img.youtube.com/vi/awRtgpRsdTQ/maxresdefault.jpg" alt="Video aula">
             </div>
             <div class="info">
-                <h2 class="title">Configurando VSCode</h2>
-                <p class="text">22 min</p>
+                <h2 class="title">Recriando interface do Pipefy</h2>
+                <p class="text">111 min</p>
                 <p class="text">Free</p>
             </div>
         </div>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="content">
-
+            <iframe class="video" src="" frameborder="0"></iframe>
         </div>
     </div>
 </div>
