--- a/views/about.njk
+++ b/views/about.njk
@@ -1,25 +1,26 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-<title>Sobre - Davi Lobo</title>
+<title>Sobre - {{about.name}}</title>
 {% endblock %}
 
 {% block content %}
     <main id="main-content" class="_center _grid">
         <div class="bio-container">
-            <div class="wrapper"><img class="img" src="https://avatars3.githubusercontent.com/u/42360847?s=460&v=4" alt="Davi Lobo"></div>
-            <h1 class="name">Davi Lobo</h1>
+            <div class="wrapper"><img class="img" src="{{about.avatar_url}}" alt="Imagem de {{about.name}}"></div>
+            <h1 class="name">{{about.name}}</h1>
             <div class="bio">
-                <h2 class="subtitle">Web Developer</h2>
-                <p class="text">Web developer at Bleez E-commerce and Computer Science student at IFCE, Javascript, Node, React and R. Native in a near future.</p class="text">
-                <p class="text">In my free time, I also like to detonate on Guitar Hero.</p>
+                <h2 class="subtitle">{{about.role}}</h2>
+                <p class="text">{{about.bio}}</p class="text">
+                <p class="text">{{about.bio2}}</p>
             </div>
         </div>
         
         <div class="social-media">
             <ul class="nav-list">
-                <li class="item"><a class="link _underline" target="_blank" href="https://github.com/Davi-Lobo">Github</a></li>
-                <li class="item"><a class="link _underline" target="_blank" href="https://www.linkedin.com/in/davi-lobo-gomes/">Linkedin</a></li>
+                {% for link in about.links %}
+                <li class="item"><a class="link _underline" target="_blank" href="{{link.url}}">{{link.name}}</a></li>
+                {% endfor %}
             </ul>
         </div>
     </main>
