--- a/views/layout.njk
+++ b/views/layout.njk
@@ -10,7 +10,9 @@
         <meta charset="utf-8">
         <meta name="author" content="Davi Lobo">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="assets/css/styles-min.css">
+        <link rel="favicon" href="favicon" type="image">
 
     </head>
 
