--- a/views/videos.njk
+++ b/views/videos.njk
@@ -10,7 +10,7 @@
 <main id="main-content" class="_grid">
     <h1>Aulas</h1>
     
-    <section class="cards-container">
+    <section class="grid-container">
         {%for item in items%}
         <div class="card-item" id="{{item.id}}">
             <div class="wrapper">
@@ -20,6 +20,7 @@
                 <h2 class="title">{{item.title}}</h2>
                 <p class="text">{{item.duration}}</p>
                 <p class="text">{{item.price}}</p>
+                <a class="openModal" id="{{item.id}}">Modal</a>
             </div>
         </div>
         {% endfor %}
